--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,16 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.batch:spring-batch-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	
-	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	// JWT https://pekahblog.tistory.com/62 참고
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 	// Swagger https://resilient-923.tistory.com/414 참고
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+	//implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.1'
 }
 
 tasks.named('test') {
